# Playlistarr

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PRE_COMMIT_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  api_manager.py  client.py  config.py  config.sample.py  discover_music_videos.py  filters.py  install.cmd  install.sh  muchloud_artists.csv  playlist_apply_invalidation.py  playlist_invalidate.py  playlistarr.cmd  playlistarr.sh  pyproject.toml  requirements.txt  run.cmd  run.sh  utils.py  youtube_playlist_sync.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example
docs/: CHANGELOG.md  CONTRIBUTING.md  PRE_COMMIT_CHECKLIST.md  RELEASE_CHECKLIST.md  SETUP.md
profiles/: muchloud.csv  muchloud.json
scripts/: cleanup_for_release.ps1  migrate_artist_folders.py  scratch_logging_test.py  verify_release.py
src/: __init__.py  api_manager.py  bootstrap.py  branding.py  cleanup.py  client.py  config.py  config.sample.py  discover_music_videos.py  env.py  filters.py  logger.py  oauth_health_check.py  paths.py  playlist_apply_invalidation.py  playlist_invalidate.py  playlistarr.py  run_state.py  runner.py  ui.py  ui_events.py  utils.py  youtube_playlist_sync.py
src/auth/: __init__.py  base.py  errors.py  health.py  registry.py
src/auth/providers/: youtube.py
src/cli/: __init__.py  cli_auth.py  cli_env.py  cli_logs.py  cli_profiles.py  cli_runs.py  cli_sync.py  common.py  render.py
src/env/: __init__.py  paths.py
src/logger/: __init__.py  console.py  context.py  file.py  log_paths.py  retention.py  state.py
src/pipeline/: cleanup.py  run_state.py
src/providers/: base.py
src/providers/youtube/: client.py  provider.py
src/stages/: __init__.py  discover.py  invalidate_apply.py  invalidate_plan.py  sync.py
src/ui/: __init__.py  config.py  console.py  events.py  state.py
src/utils/: __init__.py  tooling.py
tests/: conftest.py  test_artist_counting.py  test_auth_health.py  test_auth_provider_youtube.py  test_cli_smoke.py  test_env.py  test_logger.py  test_logger_contract.py  test_logger_core.py  test_logger_retention.py  test_paths.py  test_run_outcome_structure.py  test_runner_invariants.py  test_runner_state_inference.py  test_ui_event_parsing.py  test_ui_state.py  test_ui_summary.py
