[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlistarr"
version = "0.1.0"
description = "YouTube playlist synchronization and management tool"
requires-python = ">=3.10"

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",

    "requests>=2.31.0",
    "isodate>=0.6.1",
    "python-dotenv>=1.0.0",

    "structlog>=23.1.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=24.0.0",
    "flake8>=6.1.0",
    "types-requests>=2.31.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
