[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------
# Packaging
# -------------------------------------------------

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------------------------
# Project metadata
# -------------------------------------------------

[project]
name = "playlistarr"
version = "1.2.2"
description = "Quota-aware, log-driven YouTube playlist automation engine"
requires-python = ">=3.10"

authors = [
    { name = "Zach Howard", email = "zdhoward@users.noreply.github.com" }
]

readme = "README.md"
license = { text = "MIT" }

keywords = [
    "youtube",
    "playlist",
    "automation",
    "homelab",
    "cli",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

# -------------------------------------------------
# Runtime dependencies
# -------------------------------------------------

dependencies = [
    # Google / YouTube
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",

    # Core utilities
    "requests>=2.31.0",
    "isodate>=0.6.1",
    "python-dotenv>=1.0.0",

    # CLI / logging
    "rich==13.7.0",
]

# -------------------------------------------------
# Optional dependencies
# -------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=24.0.0",
    "flake8>=6.1.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.7.0",
]


# -------------------------------------------------
# Tooling configuration
# -------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:httplib2\\..*",
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
max-line-length = 100
